WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229013
Fix some `NSAttributedString` inconsistencies between WK1 and WK2
https://bugs.webkit.org/show_bug.cgi?id=229013
Summary
Fix some `NSAttributedString` inconsistencies between WK1 and WK2
Devin Rousso
Reported
2021-08-11 14:50:05 PDT
`NSAttributedString` now uses WK2, which has caused us to discover some bugs :P
Attachments
Patch
(12.36 KB, patch)
2021-08-11 15:02 PDT
,
Devin Rousso
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(12.35 KB, patch)
2021-08-11 15:32 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2021-08-11 14:50:19 PDT
<
rdar://problem/81215696
>
Devin Rousso
Comment 2
2021-08-11 15:02:05 PDT
Created
attachment 435378
[details]
Patch
Timothy Hatcher
Comment 3
2021-08-11 15:05:02 PDT
Comment on
attachment 435378
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=435378&action=review
> Source/WebKit/UIProcess/API/Cocoa/NSAttributedString.mm:155 > + [configuration preferences]._defaultFontSize = 12;
configuration.preferences._defaultFontSize = 12;
Devin Rousso
Comment 4
2021-08-11 15:05:44 PDT
Comment on
attachment 435378
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=435378&action=review
>> Source/WebKit/UIProcess/API/Cocoa/NSAttributedString.mm:155 >> + [configuration preferences]._defaultFontSize = 12; > > configuration.preferences._defaultFontSize = 12;
we can't cause it's a `RetainPtr` 😅
Devin Rousso
Comment 5
2021-08-11 15:32:16 PDT
Created
attachment 435379
[details]
Patch
EWS
Comment 6
2021-08-12 11:58:54 PDT
Committed
r280973
(
240477@main
): <
https://commits.webkit.org/240477@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435379
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug